--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
 	<title>Sarah's Portfolio</title>
-	<link href="myCSS.css" rel="stylesheet" type="text/css">
+	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header">
-  	<h1>Sarah Snow's Digital Media Portfolio</h1>
+  	<h1>Photoshop projects</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="raster/index.html">photoshop</a> | 2 | 3</h3>
+    <h3><a href="../index.html">Home</a> | <a href="index.html">photoshop</a> | 2 | 3</h3>
   </div>
   <div class="content">I love fortnight!</div>
   <div class="footer">
