--- a/raster/index.html
+++ b/raster/index.html
@@ -12,7 +12,7 @@
   	<h1>Sarah Snow's Digital Media Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="raster/index.html">photoshop</a> | 2 | 3</h3>
+    <h3><a href="../index.html">Home</a> | <a href="index.html">Photoshop</a> | <a href="../illustrator/index.html">Illustrator</a> | 3</h3>
   </div>
   <div class="content">I love fortnight!</div>
   <div class="footer">
