--- a/raster/index.html
+++ b/raster/index.html
@@ -14,7 +14,9 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | 3</h3>
   </div>
-  <div class="content">I love fortnight!</div>
+  <div class="content">
+	  <img src="dogfood.jpg" alt="Dog Food Magazine" width="920" height="600">
+	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
