--- a/raster/index.html
+++ b/raster/index.html
@@ -12,9 +12,10 @@
   	<h1>Sarah Snow's Digital Media Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | 3</h3>
+    <h3><a href="../index.html">Home</a> | <a href="index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="../vector/index.html">Animation</a> | <a href="../vector/index.html">Audio</a> |3</h3>
   </div>
   <div class="content">
+	  <h2>Magazine Cover | Sept 2022 | Dog Food </h2>
 	  <img src="dogfood.jpg" alt="Dog Food Magazine" width="920" height="600">
 	</div>
   <div class="footer">
@@ -33,3 +34,4 @@ Status
 Docs
 Contact GitHub
 
+<a href="../vector/index.html">Illustrator</a> |
