--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <div class="nav">
     <h3><a href="index.html">Home</a> | <a href="raster/index.html">photoshop</a> | 2 | 3</h3>
   </div>
-  <div class="content">I love fortnight!</div>
+  <div class="content">I love fortnite!
+	  <img src="raster/yah.jpg" alt="Welcome" width="600" height="920">
+	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
