--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1>Photoshop projects</h1>
+  	<h1>Sarah's Portfolio</h1>
   </div>
   <div class="nav">
     <h3><a href="index.html">Home</a> | <a href="raster/index.html">photoshop</a> | 2 | 3</h3>
   </div>
-  <div class="content">I love fortnite!
+  <div class="content">I love Fortnite
 	  <img src="raster/yah.jpg" alt="Welcome" width="600" height="920">
 	</div>
   <div class="footer">
