--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>Sarah's Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="raster/index.html">photoshop</a> | 2 | 3</h3>
+    <h3><a href="index.html">Home</a>
   </div>
   <div class="content">I love Fortnite
 	  <img src="raster/yah.jpg" alt="Welcome" width="600" height="920">
