--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3><a href="index.html">Home</a>
   </div>
   <div class="content">I love Fortnite
-	  <img src="raster/yah.jpg" alt="Welcome" width="600" height="920">
+	  <img src="raster/yah.jpg" alt="Welcome" width="600">
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
