--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>Sarah's Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a>
+    <h3><a href="index.html">Home</a> | <a href="index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="../vector/index.html">Animation</a> | <a href="../vector/index.html">Audio</a> | <a href="../vector/index.html">Video</a> | 3</h3>
   </div>
   <div class="content">I love Fortnite
 	  <img src="raster/yah.jpg" alt="Welcome" width="600">
