--- a/raster/index.html
+++ b/raster/index.html
@@ -12,11 +12,11 @@
   	<h1>Sarah Snow's Digital Media Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="../vector/index.html">Animation</a> | <a href="../vector/index.html">Audio</a> | <a href="../vector/index.html">Video</a> | 3</h3>
+    <h3><a href="../index.html">Home</a> | <a href="index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="../animation/index.html">Animation</a> | <a href="../audio/index.html">Audio</a> | <a href="../video/index.html">Video</a>
   </div>
   <div class="content">
 	  <h2>Magazine Cover | Sept 2022 | Dog Food </h2>
-	  <img src="dogfood.jpg" alt="Dog Food Magazine" width="600" height="920">
+	  <img src="dogfood.jpg" alt="Dog Food Magazine" width="600">
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
