--- a/raster/index.html
+++ b/raster/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 	  <h2>Magazine Cover | Sept 2022 | Dog Food </h2>
-	  <img src="dogfood.jpg" alt="Dog Food Magazine" width="600">
+	  <img src="dogfood.jpg" alt="Dog Food Magazine" style="width:500px;">
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
