--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   	<h1>Sarah's Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="../vector/index.html">Animation</a> | <a href="../vector/index.html">Audio</a> | <a href="../vector/index.html">Video</a> | 3</h3>
+    <h3><a href="index.html">Home</a> | <a href="raster/index.html">Photoshop</a> | <a href="vector/index.html">Illustrator</a> | <a href="animation/index.html">Animation</a> | <a href="audio/index.html">Audio</a> | <a href="vidoe/index.html">Video</a>
   </div>
-  <div class="content">I love Fortnite
+  <div class="content">
 	  <img src="raster/yah.jpg" alt="Welcome" width="600">
 	</div>
   <div class="footer">
