--- a/raster/index.html
+++ b/raster/index.html
@@ -3,13 +3,13 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>Sarah's Portfolio</title>
+	<title>Photoshop Projects</title>
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header">
-  	<h1>Sarah Snow's Digital Media Portfolio</h1>
+  	<h1>Photoshop Projects</h1>
   </div>
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="../animation/index.html">Animation</a> | <a href="../audio/index.html">Audio</a> | <a href="../video/index.html">Video</a>
