--- a/animation/index.html
+++ b/animation/index.html
@@ -1,1 +1,35 @@
-
+<!DOCTYPE html>
+<html class="homePage">
+<head>
+	<!-- This is a comment! Text here will be ignored by the browser. -->
+	<meta charset="UTF-8">
+	<title>Photoshop Projects</title>
+	<link href="../myCSS.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<div class="container">
+  <div class="header">
+  	<h1>Photoshop Projects</h1>
+  </div>
+  <div class="nav">
+    <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="index.html">Animation</a> | <a href="../audio/index.html">Audio</a> | <a href="../video/index.html">Video</a>
+  </div>
+  <div class="content">
+	  <h2>Magazine Cover | Sept 2022 | Dog Food </h2>
+	  <img src="dogfood.jpg" alt="Dog Food Magazine" style="width:500px;">
+	</div>
+  <div class="footer">
+    <h4>About Me | Contact | Copyright 2021</h4>
+  </div>
+</div>
+</body>
+</html>
+Footer
+© 2022 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
