--- a/animation/index.html
+++ b/animation/index.html
@@ -14,9 +14,7 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="index.html">Animation</a> | <a href="../audio/index.html">Audio</a> | <a href="../video/index.html">Video</a>
   </div>
-  <div class="content">
-	  <h2>Magazine Cover | Sept 2022 | Dog Food </h2>
-	  <img src="dogfood.jpg" alt="Dog Food Magazine" style="width:500px;">
+  <div class="content">Wild Style from the lego Moive
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
