--- a/vector/index.html
+++ b/vector/index.html
@@ -3,18 +3,19 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>Sarah's Portfolio</title>
+	<title>Illustrator Projects</title>
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header">
-  	<h1>Sarah Snow's Digital Media Portfolio</h1>
+  	<h1>Illustrator Projects</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="index.html">Illustrator</a> | 2 | 3</h3>
+    <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Photoshop</a> | <a href="index.html">Illustrator</a> | <a href="../animation/index.html">Animation</a> | <a href="../audio/index.html">Audio</a> | <a href="../video/index.html">Video</a>
   </div>
-  <div class="content">I love fortnight!</div>
+  <div class="content"> I love link from Zelda: Breath of the Wild
+	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
@@ -30,17 +31,3 @@ Security
 Status
 Docs
 Contact GitHub
-Footer
-© 2022 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
