--- a/video/index.html
+++ b/video/index.html
@@ -1,1 +1,47 @@
-
+<!DOCTYPE html>
+<html class="homePage">
+<head>
+	<!-- This is a comment! Text here will be ignored by the browser. -->
+	<meta charset="UTF-8">
+	<title>Video Projects</title>
+	<link href="../myCSS.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<div class="container">
+  <div class="header">
+  	<h1>Video Projects</h1>
+  </div>
+  <div class="nav">
+    <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="../animation/index.html">Animation</a> | <a href="../audio/index.html">Audio</a> | <a href="index.html">Video</a>
+  </div>
+  <div class="content"> Live Laugh Love <3
+	</div>
+  <div class="footer">
+    <h4>About Me | Contact | Copyright 2021</h4>
+  </div>
+</div>
+</body>
+</html>
+Footer
+© 2022 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Footer
+© 2022 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
