--- a/raster/index.html
+++ b/raster/index.html
@@ -17,6 +17,7 @@
   <div class="content">
 	  <h2>Magazine Cover | Sept 2022 | Dog Food </h2>
 	  <img src="dogfood.jpg" alt="Dog Food Magazine" style="width:500px;">
+	  <img src="photo.jpg" alt="Picture Frame Project" style="width:500px;">
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
