--- a/raster/index.html
+++ b/raster/index.html
@@ -18,6 +18,7 @@
 	  <h2>Magazine Cover | Sept 2022 | Dog Food </h2>
 	  <img src="dogfood.jpg" alt="Dog Food Magazine" style="width:500px;">
 	  <img src="photo.jpg" alt="Picture Frame Project" style="width:500px;">
+	  <img src="album2.jpg" alt="Album Cover" style="width:500px;">
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
