--- a/audio/index.html
+++ b/audio/index.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="../animation/index.html">Animation</a> | <a href="index.html">Audio</a> | <a href="../video/index.html">Video</a>
   </div>
-  <div class="content"> iloo[i986
+  <div class="content"> 
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
