--- a/video/index.html
+++ b/video/index.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="../animation/index.html">Animation</a> | <a href="../audio/index.html">Audio</a> | <a href="index.html">Video</a>
   </div>
-  <div class="content"> Live Laugh Love <3
+  <div class="content"> mr. kapptie is the best teacher ever
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
