--- a/vector/index.html
+++ b/vector/index.html
@@ -15,8 +15,8 @@
     <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Photoshop</a> | <a href="index.html">Illustrator</a> | <a href="../animation/index.html">Animation</a> | <a href="../audio/index.html">Audio</a> | <a href="../video/index.html">Video</a>
   </div>
   <div class="content"> 
-	  <h3>I love link from Zelda: Breath of the Wild</h3>
-	  <img src="link.jpg" alt="link " style="width:500px;">
+	  <h3></h3>
+	  <img src="" alt="" style="width:500px;">
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
