--- a/vector/index.html
+++ b/vector/index.html
@@ -17,7 +17,7 @@
   <div class="content"> 
 	  <h3>Illustrator Projects</h3>
 	  <img src="face.png alt="Face Art Work" style="width:500px;">
-	  <img src=" alt="" style="width:500px;">
+	  <img src="elefant.png" alt="Cartoon Style Picture" style="width:500px;">
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
