--- a/audio/index.html
+++ b/audio/index.html
@@ -20,7 +20,8 @@
   <source src="digitalmedia.mp3" type="audio/ogg">
   <source src="digitalmedia.mp3" type="audio/mpeg">
 	<h4>Minecraft Sounds</h4>
-<source src="minecraft.mp3" type="audio/ogg">
+       	<audio controls>
+ <source src="minecraft.mp3" type="audio/ogg">
   <source src="minecaft.mp3" type="audio/mpeg">
 	</div> 
   <div class="footer">
