--- a/vector/index.html
+++ b/vector/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content"> 
 	  <h3>Illustrator Projects</h3>
-	  <img src="face.png alt="Face Art Work" style="width:500px;">
+	  <img src="face.png" alt="Face Art Work" style="width:500px;">
 	  <img src="elefant.png" alt="Cartoon Style Picture" style="width:500px;">
 	</div>
   <div class="footer">
