--- a/audio/index.html
+++ b/audio/index.html
@@ -21,8 +21,8 @@
   <source src="digitalmedia.mp3" type="audio/mpeg">
 	<h4>Minecraft Sounds</h4>
        	<audio controls>
-  <source src="minecraft.mp3" type="audio/ogg">
-  <source src="minecaft.mp3" type="audio/mpeg">
+  <source src="audio_minecraft audio.mp3" type="audio/ogg">
+  <source src="audio_minecraft audio.mp3" type="audio/mpeg">
 	</div> 
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
