--- a/animation/index.html
+++ b/animation/index.html
@@ -14,8 +14,8 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="index.html">Animation</a> | <a href="../audio/index.html">Audio</a> | <a href="../video/index.html">Video</a>
   </div>
-  <div class="content"> spongebob
-	  <img src="spongbob.jpg" alt="spong" style="width:500px;">
+  <div class="content"> 
+	 
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
