--- a/video/index.html
+++ b/video/index.html
@@ -15,6 +15,7 @@
     <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Photoshop</a> | <a href="../vector/index.html">Illustrator</a> | <a href="../animation/index.html">Animation</a> | <a href="../audio/index.html">Audio</a> | <a href="index.html">Video</a>
   </div>
   <div class="content"> 
+	  <h3>Project for a fake movie trailer:</h3>
 	  <h3>https://youtu.be/M48dc9s0RuM</h3>
 	</div>
   <div class="footer">
