--- a/animation/index.html
+++ b/animation/index.html
@@ -18,7 +18,9 @@
 	  <h2>Animation</h2>
 	  <br><vidoe controls>
 	  	  <source src="animation/Snowboard.mp4" type="vidoe/mp4">
-	</div>
+	  <br><vidoe controls>
+	  	  <source src="nimation/RECOVER_RECOVER_catanimation.swf" type="vidoe/mp4">
+	  </div>  
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
